inaproc-api-gateway/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inaproc-api-gateway
  namespace: prod
  annotations:
    kubernetes.io/ingress.class: "nginx"
  labels:
    app: inaproc-api-gateway
    component: api-gateway
spec:
  ingressClassName: nginx
  rules:
  - host: data.eproc.dev
    http:
      paths:
      - path: /apps/account
        pathType: Prefix
        backend:
          service:
            name: inaproc-api-gateway
            port:
              number: 80
      - path: /authorization
        pathType: Prefix
        backend:
          service:
            name: inaproc-api-gateway
            port:
              number: 80
      - path: /consumer
        pathType: Prefix
        backend:
          service:
            name: inaproc-api-gateway
            port:
              number: 80
